Fix small display menu visibility when Zoom overlay is open

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -238,7 +238,7 @@ a.theme-selector-toggle {
             display: block;
             opacity: 0.0;
             position: fixed;
-            z-index: 999;
+            z-index: 1000;
             top: 3.8rem;
             right: 1rem;
             left: 1rem;
